--- a/config.yaml
+++ b/config.yaml
@@ -51,13 +51,14 @@ params:
             default: Licensed under CC BY-NC-SA 4.0
 
     comments:
-        enabled: false
+        enabled: true
         provider: disqus
+        disqusShortname: koha-blog
 
         disqusjs:
-            shortname:
-            apiUrl:
-            apiKey:
+            shortname: koha-blog
+            apiUrl: 
+            apiKey: 
             admin:
             adminLabel:
 
