--- a/config.yaml
+++ b/config.yaml
@@ -48,7 +48,7 @@ params:
         readingTime: true
         license:
             enabled: true
-            default: Licensed under CC BY-NC-SA 4.0
+            default: All rights reserved.
 
     comments:
         enabled: true
