--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,12 @@
 baseurl: https://blog.bokukoha.dev/
 languageCode: ja
 theme: hugo-theme-stack
-title: Koha Blog
+title: こは雑記帳
 copyright: Koha
 
 # Theme i18n support
 # Available values: ar, bn, ca, de, el, en, es, fr, hu, id, it, ja, ko, nl, pt-br, th, uk, zh-cn, zh-hk, zh-tw
-DefaultContentLanguage: en
+DefaultContentLanguage: ja
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
@@ -51,7 +51,7 @@ params:
             default: All rights reserved.
 
     comments:
-        enabled: true
+        enabled: false
         provider: disqus
         disqusShortname: koha-blog
 
