--- a/config.yaml
+++ b/config.yaml
@@ -185,6 +185,12 @@ menu:
     main: []
 
     social:
+        - identifier: home
+          name: 
+          url: /
+          params:
+              icon: home
+              
         - identifier: github
           name: GitHub
           url: https://github.com/Kohxax
