--- a/config.yaml
+++ b/config.yaml
@@ -177,6 +177,9 @@ params:
             enabled: true
         content:
             enabled: true
+    
+    apiEndpoint: 'https://wibryx04g3.execute-api.ap-northeast-1.amazonaws.com/v1/likes'
+    apiKey: 'VfUZ5TyV2x3jLhs0MWzt61RdMtlN5BTC7ts7N3eZ'
 
 ### Custom menu
 ### See https://stack.jimmycai.com/config/menu
